<resources>
    <string name="app_name">Taxi Express</string>
    <string name="app_viajes">Tus Viajes Asignados</string>
    <string name="app_ingresar">Ingresar</string>
    <string name="app_user">Correo de usuario</string>
    <string name="app_user_hint">Correo de usuario</string>
    <string name="app_contra">Contraseña</string>
    <string name="app_bienvenidos">Bienvenido</string>
    <string name="app_ruta_asignada">Tu Ruta Asignada</string>
    <string name="app_contra_hint">••••••••••</string>
    <string name="app_prox_viaje">Próximo Viaje</string>
    <string name="app_msn1">NISSAN 2 - Gremial</string>
    <string name="app_aceptar">Aceptar</string>
    <string name="app_rechazar">Rechazar</string>
    <string name="app_detalles">Detalles:</string>
    <string name="title_activity_mapa_viajes">Map</string>
    <string name="access_token">pk.eyJ1IjoiYXJrYWRpIiwiYSI6ImNrOGJ6b2o0bTBid2sza283azg4d2JsYWYifQ._ubT8kqm_s3XO9124SPK8Q</string>
    <string name="title_activity_menus">Menus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Menú viajes/rutas asignadas -->
    <string name="proximo_viaje">Próximo Viaje:</string>
    <string name="proximo_hint_viaje">Próximo destino - Próximo destino</string>
    <!-- Menú desplegable -->
    <string name="nav_header_title">User Name!</string>
    <string name="nav_header_subtitle">Placas del auto</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Nombres de los íconos -->
    <string name="menu_home">Tu ruta asignada</string>
    <string name="menu_ruta">Viajes</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Acumulado</string>
    <string name="menu_soporte">Soporte</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_salir">Salir</string>

    <!-- Cadenas para "perfil" -->
    <string name="profile_hint_name">Martín Isaac Falcón Segovia</string>
    <string name="profile_calificacion">Calificación: </string>
    <string name="profile_licencia">Licencia: </string>
    <string name="profile_estado">Estado: </string>
    <string name="profile_hint_calificacion">9.5</string>
    <string name="profile_hint_licencia">F012563</string>
    <string name="profile_hint_estado">Activo</string>

    <string name="home_second">Home Second</string>

    <!-- Menú Settings "menus.xml" -->
    <string name="Logout">Cerrar sesión</string>

    <!-- Strings for "ruta_nueva" objetc -->
    <string name="ruta_nueva_ID">ID del viaje:</string>
    <string name="ruta_nueva_ppartida">Salida:</string>
    <string name="ruta_nueva_pdestino">Destino:</string>
    <string name="ruta_nueva_pasajero">Pasajero:</string>
    <string name="ruta_nueva_Hora">Hora:</string>
    <string name="ruta_nueva_hint_Hora_salida">Hora de salida:</string>
    <string name="ruta_nueva_hint_Hora_llegada">Hora de llegada:</string>
    <string name="ruta_nueva_hint_ID_viaje">083694312</string>
    <string name="ruta_nueva_hint_ppartida">Nissan 2</string>
    <string name="ruta_nueva_hint_pdestino">El Parian</string>
    <string name="ruta_nueva_hint_pasajero">Nombre pasajero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_borrame">borrame</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
