<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_time_to_leave_black_24dp"
            android:title="@string/menu_ruta" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_soporte"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_soporte" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_ayuda" />
    </group>
</menu>
