<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio.Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewUserEmailNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/editTextAlfilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/app_user_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserEmailNav" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_contra"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlfilEmail" />

    <EditText
        android:id="@+id/editTextAlfilContra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/app_contra_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextAlfilEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextAlfilEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/fondo_btn"
        android:text="@string/app_ingresar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextAlfilContra"
        app:layout_constraintStart_toStartOf="@+id/editTextAlfilContra"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlfilContra" />



    <ImageView
        android:id="@+id/showcontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAlfilContra"
        app:layout_constraintStart_toEndOf="@+id/editTextAlfilContra"
        app:layout_constraintTop_toTopOf="@+id/editTextAlfilContra"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@drawable/ic_show_password_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>